--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,15 +21,28 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        
-    - run: npm ci
+    # FRONTEND
+    - name: Install frontend dependencies
       working-directory: ./frontend
-    - run: npm run build --if-present
+      run: npm install
+
+    - name: Build frontend
       working-directory: ./frontend
-    - run: npm test
+      run: npm run build
+
+    - name: Test frontend
       working-directory: ./frontend
+      run: npm test
+
+    # BACKEND
+    - name: Install backend dependencies
+      working-directory: ./backend
+      run: npm install
+
+    - name: Build backend
+      working-directory: ./backend
+      run: npm run build
+
+    - name: Test backend
+      working-directory: ./backend
+      run: npm test
