--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Build frontend
       working-directory: ./frontend
-      run: npm run dev
+      run: npm run build
 
     # BACKEND
     - name: Install backend dependencies
@@ -37,4 +37,4 @@ jobs:
 
     - name: Build backend
       working-directory: ./backend
-      run: npm run dev
+      run: npm run build
