--- a/.gitignore
+++ b/.gitignore
@@ -12,13 +12,15 @@
 /build
 
 # misc
+.env
+./backend/.env
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 /backend/src/.env
-
+./backend/.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
