--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.12.2",
     "dayjs": "^1.11.18",
     "react": "^19.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-router": "^7.9.1",
