--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/backend/node_modules
-/frontend/node_modules
-/node_modules
+\backend\node_modules
+.\backend\node_modules
+
+\frontend\node_modules
+\node_modules
+\frontend\dist
+\node_modules
 /.pnp
 .pnp.js
 
