--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev":"NODE_ENV=development nodemon backend/src/server.js",
+    "start": "NODE_ENV=production node backend/src/server.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "type": "module",
   "author": "",
