--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,10 @@
     "@mui/material": "^7.3.2",
     "@mui/x-date-pickers": "^8.14.0",
     "axios": "^1.12.2",
+    "backend": "file:../backend",
+    "dayjs": "^1.11.18",
     "gasp": "^0.0.2",
     "gsap": "^3.13.0",
-    "dayjs": "^1.11.18",
     "react": "^19.1.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
