--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev":"NODE_ENV=development nodemon backend/src/server.js",
-    "start": "NODE_ENV=production node backend/src/server.js",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+    "dev": "cross-env NODE_ENV=development nodemon src/server.js",
+    "start": "cross-env NODE_ENV=production node src/server.js",
+    "build": "npm install && npm install --prefix ../frontend && npm run build --prefix ../frontend"
   },
   "type": "module",
   "author": "",
@@ -26,6 +26,7 @@
     "sharp": "^0.34.4"
   },
   "devDependencies": {
+    "cross-env": "^10.1.0",
     "nodemon": "^3.1.10"
   }
 }
